--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" class="h-[100vh]">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search For Receipts</title>
+    <title>Vite + Vue + TS</title>
   </head>
   <body>
-    <div id="app" class="min-h-full"></div>
-    <script type="module" src="/src/main.js"></script>
-     
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
